# easy_cv

./: .gitignore  README.md  manage.py  pyproject.toml
cv/: admin.py  forms.py  models.py  urls.py  views.py
cv/migrations/: 0001_initial.py  0002_remove_resume_just_created_tag_historicaltag_and_more.py  0003_rename_experiencepoint_experience_and_more.py  0004_rename_experience_experiencepoint_and_more.py  0005_remove_historicaltag_title_remove_tag_title_and_more.py  0006_company_jobdescription_historicaljobdescription_and_more.py  0007_historicaljobdescription_raw_text_and_more.py  0008_alter_company_options_and_more.py  0009_alter_historicaljobdescription_raw_text_and_more.py  0010_jobdescription_tags.py  0011_synonym_historicalsynonym_tag_synonyms.py  0012_remove_synonym_created_by_and_more.py  0013_alter_historicaltag_name_alter_tag_name.py  0014_alter_historicaltag_keywords_alter_tag_keywords.py  0015_remove_resume_experience_points_and_more.py  0016_historicalresumejob_updated_at_resumejob_updated_at.py  0017_experiencepoint_content_and_more.py  0018_remove_experiencepoint_name_and_more.py  0019_alter_historicalresumejob_options_and_more.py  0020_alter_resumejobduty_job.py  0021_alter_historicalresumejobduty_options_and_more.py  0022_historicalresumejob_job_duty_raw_text_and_more.py  0023_alter_historicalresumejob_job_duty_raw_text_and_more.py  0024_alter_historicalresume_education_and_more.py  0025_remove_historicalresume_education_and_more.py  0033_alter_tag_category.py  (+13 more)
easy_cv/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+43 files in other folders)
